--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/coconut-icon-128x128.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/icon-128x128.png" type="image/x-icon">
   <meta name="description" content="">
   
   
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<div id="features2-12" data-org="28337" data-mfl="61e75ec3d80a4f27d0645fc1" class="cid-sUVe3tELH8" data-rv-view="69"><div style="clear:both"></div></div><section data-bs-version="5.1" class="features1 cid-sUVe3tELH8" id="features2-12">
+<div id="features2-12" data-org="28337" data-mfl="61e75ec3d80a4f27d0645fc1" class="cid-sUVe3tELH8" data-rv-view="534"><div style="clear:both"></div></div><section data-bs-version="5.1" class="features1 cid-sUVe3tELH8" id="features2-12">
 
     
 
@@ -131,9 +131,9 @@
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-box align-center">
-                        <a href="https://work.coconutmcgames.com/log"><span class="mbr-iconfont mobi-mbri-clock mobi-mbri"></span></a>
+                        <a href="devportal-loghours.html"><span class="mbr-iconfont mobi-mbri-clock mobi-mbri"></span></a>
                         <h4 class="card-title align-center mbr-black mbr-fonts-style display-7">
-                            <strong><a href="https://work.coconutmcgames.com/log" class="text-primary" target="_blank">Hours Log</a></strong></h4>
+                            <strong><a href="devportal-loghours.html" class="text-primary" target="_blank">Hours Log</a></strong></h4>
                     </div>
                 </div>
             </div>
