--- a/devportal-loghours.html
+++ b/devportal-loghours.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
+  <link rel="stylesheet" href="assets/animatecss/animate.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
@@ -56,8 +57,9 @@
     </nav>
 </section>
 
-<iframe src="https://app.myhours.com/#/track" title="MyHours" height="540" class="cid-5UD3GVSe3o" id="footer7-2k" data-rv-view="175"></iframe><section id="top-1" hidden><a href="https://mobirise.site"></a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/witsec-mailform/witsec-mailform.js"></script>  
+<iframe src="https://app.myhours.com/#/track" title="MyHours" height="540" class="cid-5UD3GVSe3o" id="footer7-2k" data-rv-view="181"></iframe><section id="top-1" hidden><a href="https://mobirise.site"></a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/witsec-mailform/witsec-mailform.js"></script>  
   
   
-</body>
+  <input name="animation" type="hidden">
+  </body>
 </html>
