--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
+  <link rel="stylesheet" href="assets/animatecss/animate.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
@@ -58,7 +59,7 @@
     </nav>
 </section>
 
-<div id="features2-12" data-org="28337" data-mfl="61e75ec3d80a4f27d0645fc1" class="cid-sUVe3tELH8" data-rv-view="149"><div style="clear:both"></div></div><section data-bs-version="5.1" class="features1 cid-sUVe3tELH8" id="features2-12">
+<div id="features2-12" data-org="28337" data-mfl="61e75ec3d80a4f27d0645fc1" class="cid-sUVe3tELH8" data-rv-view="155"><div style="clear:both"></div></div><section data-bs-version="5.1" class="features1 cid-sUVe3tELH8" id="features2-12">
 
     
 
@@ -158,5 +159,6 @@
 </section><section id="top-1" hidden><a href="https://mobirise.site"></a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/witsec-mailform/witsec-mailform.js"></script>  
   
   
-</body>
+  <input name="animation" type="hidden">
+  </body>
 </html>
